# logger-manager-sampler-plugin

examples/app-contoso-awslogger/: .env  app.py  requirements.txt
examples/app-fabrikam-azurelogger/: .env  app.py  requirements.txt
loggermanager/: pyproject.toml
loggermanager/loggermanager/: __init__.py  logger_interface.py  plugin_manager.py
loggermanager_aws_cloudwatch/: pyproject.toml
loggermanager_aws_cloudwatch/loggermanager_aws_cloudwatch/: aws_cloudwatch_logger.py
loggermanager_azure_appinsights/: pyproject.toml
loggermanager_azure_appinsights/loggermanager_azure_appinsights/: azure_appinsights_logger.py
loggermanager_local_filesystem/: pyproject.toml
loggermanager_local_filesystem/loggermanager_local_filesystem/: local_filesystem_logger.py
