# loggermanager_aws_cloudwatch/pyproject.toml
[tool.poetry]
name = "loggermanager_aws_cloudwatch"
version = "0.1.0"
description = "AWS CloudWatch plugin for loggermanager."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
loggermanager = ">=0.1.0"
boto3 = "1.35.46"
watchtower = "3.3.1"

[tool.poetry.plugins."loggermanager.providers"]
aws_cloudwatch = "loggermanager_aws_cloudwatch.aws_cloudwatch_logger:AWSCloudWatchLogger"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
